# novotyper

./: .gitignore  README.md  pyproject.toml  scratch.py  submit-jobs-with-qsub.sh
_build/cache/: doi-2223b20d84d2b85b48aa3d11af840521.csl.json
_build/temp/mystEFpL4k/: report.fdb_latexmk  report.tex
_build/temp/mysthIFQvm/: report.fdb_latexmk
_build/temp/mystlTjD8I/: main.bib
_build/temp/mysto5g1bx/: report.fdb_latexmk
config/: config.yaml
notebooks/: report.html  report.ipynb  report.md  report.py  visualize_novosv_results_in_igv.ipynb
src/novotyper/: __main__.py  cli.coco  cli.py  genotyper.py  novotyper.coco  novotyper.py
src/novotyper/__coconut_cache__/: cli.coco.pkl  novotyper.coco.pkl
tests/: alt_scaffolds.fa  test_genotype.py
workflow/: Snakefile
